--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,6 +1,6 @@
 {% extends "blog/base.html"%}
 {% block content %}
-    <h1>Meat the Team:</h1>
+    <h1>Meet the Team:</h1>
     <div class="row">
         <div class="column-8">
           <div class="card">
