--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -2,7 +2,7 @@
 {% block content %}
 <header class="bg-dark text-center py-5 mb-4">
   <div class="container bg-dark">
-    <h1 class="font-weight-light text-white">Meet the Team</h1>
+    <h1 class="font-weight-light text-white">Meet the Ferengi</h1>
   </div>
 </header>
 
@@ -14,7 +14,7 @@
       <div class="card border-0 shadow">
         <img src="https://source.unsplash.com/TMgQMXoglsM/500x350" class="card-img-top" alt="...">
         <div class="card-body text-center">
-          <h5 class="card-title mb-0">Team Member</h5>
+          <h5 class="card-title mb-0">Courtney Battles</h5>
           <div class="card-text text-black-50">Web Developer</div>
         </div>
       </div>
@@ -24,7 +24,7 @@
       <div class="card border-0 shadow">
         <img src="https://source.unsplash.com/9UVmlIb0wJU/500x350" class="card-img-top" alt="...">
         <div class="card-body text-center">
-          <h5 class="card-title mb-0">Team Member</h5>
+          <h5 class="card-title mb-0">Shay</h5>
           <div class="card-text text-black-50">Web Developer</div>
         </div>
       </div>
@@ -34,7 +34,7 @@
       <div class="card border-0 shadow">
         <img src="https://source.unsplash.com/sNut2MqSmds/500x350" class="card-img-top" alt="...">
         <div class="card-body text-center">
-          <h5 class="card-title mb-0">Team Member</h5>
+          <h5 class="card-title mb-0">Scott</h5>
           <div class="card-text text-black-50">Web Developer</div>
         </div>
       </div>
@@ -44,7 +44,7 @@
       <div class="card border-0 shadow">
         <img src="https://source.unsplash.com/ZI6p3i9SbVU/500x350" class="card-img-top" alt="...">
         <div class="card-body text-center">
-          <h5 class="card-title mb-0">Team Member</h5>
+          <h5 class="card-title mb-0">Ryan</h5>
           <div class="card-text text-black-50">Web Developer</div>
         </div>
       </div>
@@ -55,7 +55,7 @@
     <div class="card border-0 shadow">
       <img src="https://source.unsplash.com/ZI6p3i9SbVU/500x350" class="card-img-top" alt="...">
       <div class="card-body text-center">
-        <h5 class="card-title mb-0">Team Member</h5>
+        <h5 class="card-title mb-0">Alex</h5>
         <div class="card-text text-black-50">Web Developer</div>
       </div>
     </div>
