--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -15,7 +15,7 @@
         <img src="https://source.unsplash.com/TMgQMXoglsM/500x350" class="card-img-top" alt="...">
         <div class="card-body text-center">
           <h5 class="card-title mb-0">Courtney Battles</h5>
-          <div class="card-text text-black-50">Web Developer</div>
+          <div class="card-text text-black-50">Lead Web Developer</div>
         </div>
       </div>
     </div>
@@ -24,8 +24,8 @@
       <div class="card border-0 shadow">
         <img src="https://source.unsplash.com/9UVmlIb0wJU/500x350" class="card-img-top" alt="...">
         <div class="card-body text-center">
-          <h5 class="card-title mb-0">Shay</h5>
-          <div class="card-text text-black-50">Web Developer</div>
+          <h5 class="card-title mb-0">Shay Ott</h5>
+          <div class="card-text text-black-50">Tech lead</div>
         </div>
       </div>
     </div>
@@ -34,8 +34,8 @@
       <div class="card border-0 shadow">
         <img src="https://source.unsplash.com/sNut2MqSmds/500x350" class="card-img-top" alt="...">
         <div class="card-body text-center">
-          <h5 class="card-title mb-0">Scott</h5>
-          <div class="card-text text-black-50">Web Developer</div>
+          <h5 class="card-title mb-0">Scott Polmanteer</h5>
+          <div class="card-text text-black-50">Database Architect</div>
         </div>
       </div>
     </div>
@@ -44,19 +44,19 @@
       <div class="card border-0 shadow">
         <img src="https://source.unsplash.com/ZI6p3i9SbVU/500x350" class="card-img-top" alt="...">
         <div class="card-body text-center">
-          <h5 class="card-title mb-0">Ryan</h5>
-          <div class="card-text text-black-50">Web Developer</div>
+          <h5 class="card-title mb-0">Ryan Franklin</h5>
+          <div class="card-text text-black-50">Junior Web Developer</div>
         </div>
       </div>
     </div>
   </div>
-   <!-- Team Member 4 -->
+   <!-- Team Member 5 -->
    <div class="col-xl-3 col-md-6 mb-4">
     <div class="card border-0 shadow">
-      <img src="https://source.unsplash.com/ZI6p3i9SbVU/500x350" class="card-img-top" alt="...">
+      <img src="https://picsum.photos/500/350" class="card-img-top" alt="...">
       <div class="card-body text-center">
-        <h5 class="card-title mb-0">Alex</h5>
-        <div class="card-text text-black-50">Web Developer</div>
+        <h5 class="card-title mb-0">Alex Gonzalez</h5>
+        <div class="card-text text-black-50">Backend Developer</div>
       </div>
     </div>
   </div>
