--- a/blog/templates/blog/budget_view.html
+++ b/blog/templates/blog/budget_view.html
@@ -60,7 +60,7 @@
                 <a href="admin/blog/bill/" class="btn btn-primary">Edit</a>
             </div>
             <div class="col">
-                <h4>Payroll</h4>
+                <h4>Revenue</h4>
                 <table class="table table-striped">
                     <thead>
                         <tr>
