--- a/blog/templates/blog/report.html
+++ b/blog/templates/blog/report.html
@@ -104,7 +104,7 @@
         var myChart = new Chart(ctx, {
             type: 'bar',
             data: {
-                labels: ["Bills", "Revenue", "Expenses", "Net", "Net Loss"],
+                labels: ["Bills", "Revenue", "Expenses", "Net", "Spending"],
                 datasets: [{
                     label: 'Summary of Expense',
                     fill: false,
