--- a/blog/templates/blog/news.html
+++ b/blog/templates/blog/news.html
@@ -35,7 +35,7 @@
             <div class="navbar-nav">
               {% if user.is_authenticated %}
                 <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
-                <a class="nav-item nav-link" href="#">Access Budget</a>
+                <a class="nav-item nav-link" href="{% url 'budget_view' %}">Access Budget</a>
                 <a class="nav-item nav-link" href="{% url 'goals' %}">Goals</a>
  		<a class="nav-item nav-link" href="{% url 'news' %}">Finance News</a>
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
