Dark Mode tweak
Table border color change.

--- a/blog/templates/blog/goals.html
+++ b/blog/templates/blog/goals.html
@@ -1,6 +1,7 @@
 {% extends "blog/base.html"%}
 {% block content %}
 <style>
+
 table, td, th {
   border: 1px solid black;
 }
@@ -12,6 +13,10 @@ table {
 
 th {
   text-align: left;
+}
+
+.darkmode--activated table, td, th {
+    border: 1px solid grey;
 }
 </style>
 {{title1}}
