--- a/blog/templates/blog/budget_view.html
+++ b/blog/templates/blog/budget_view.html
@@ -28,7 +28,7 @@
 <div class="container-fluid">
     {% block container %}
         <div class="row">
-            <h3>No Paid Invoices</h3>
+            <h3>Budget Overview</h3>
         </div>
         <div class="row">
             <div class="col">
